Refine CSS styling and include favicon for branding

--- a/style.css
+++ b/style.css
@@ -1,13 +1,115 @@
 :root {
   /* color */
-  --color-black: #3f454d;
-  --color-white: #ffffff;
-  --color-blue: #3b88c3;
-  --color-yellow: #fbbe28;
+  --color-black: #000000;
+  --color-silver: #c0c0c0;
+  --color-dark-blue: #1a374e;
+  --color-beige: #faf0e6;
   --color-pink: #fd7f84;
   --color-light-grey: #dfdfdf;
+  --color-white: #ffffff;
+  /* size */
+  --size-button: 60px;
+  --size-border: 4px;
+  --font-size: 18px;
+  --base-space: 8px;
+  --size-thumbnail: 50px;
+  /* animation */
+  --animation-duration: 300ms;
 }
 
 * {
-  box-sizing: border-box;
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+body {
+  height: 100vh;
+  background: rgb(245, 241, 241);
+  background: linear-gradient(
+    180deg,
+    rgba(245, 241, 241, 1) 0%,
+    rgba(238, 207, 208, 1) 100%
+  );
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  width: 60px;
+  height: 55px;
+}
+
+.logo {
+  width: 150px;
+  height: 100px;
+}
+
+.logo {
+  cursor: pointer;
+  transition: transform var(--animation-duration) ease;
+}
+
+.btn {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: transform var(--animation-duration) ease;
+  margin-right: var(--base-space);
+}
+
+.btn:hover,
+.logo:hover {
+  transform: scale(1.1);
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  gap: var(--base-space);
+}
+
+.colorBtn {
+  font-size: var(--font-size);
+  padding: calc(var(--base-space) * 2);
+  border-radius: var(--size-border);
+}
+
+.silver {
+  background-color: var(--color-silver);
+}
+
+.darkBlue {
+  background-color: var(--color-dark-blue);
+  color: var(--color-beige);
+}
+
+.black {
+  background-color: var(--color-black);
+  color: var(--color-beige);
+}
+
+.items {
+  width: 60%;
+  height: 60%;
+  list-style: none;
+  padding-left: 0;
+  overflow-y: scroll;
+}
+
+.item {
+  background-color: var(--color-white);
+  display: flex;
+  align-items: center;
+  padding: var(--base-space);
+  margin-bottom: var(--base-space);
+}
+
+.item__thumbnail {
+  width: var(--size-thumbnail);
+  height: 40px;
+  margin-left: var(--base-space);
+  font-size: var(--font-size);
 }
