dynamically display items with updated layout and styling

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ img {
 .logo {
   width: 150px;
   height: 100px;
+  margin-bottom: 10px;
 }
 
 .logo {
@@ -81,10 +82,11 @@ img {
   width: var(--size-button);
   height: 47px;
 }
+
 .buttons {
   display: flex;
   align-items: center;
-  gap: var(--base-space);
+  gap: 8px;
 }
 
 .colorBtn {
@@ -108,29 +110,35 @@ img {
 }
 
 .items {
-  background-color: var(--color-white);
+  background-color: transparent;
   display: flex;
-  align-items: center;
-  margin-bottom: var(--base-space);
-  width: 80%;
-  list-style: none;
-  padding-left: 0;
-  overflow-y: scroll;
+  flex-direction: column;
+  gap: var(--base-space);
+  padding: var(--base-space);
   border-radius: 10px;
+  max-height: 300px;
+  overflow-y: auto;
+  width: 80%;
 }
 
 .item {
+  width: 100%;
   background-color: var(--color-white);
+  justify-content: flex-start;
   display: flex;
   align-items: center;
   padding: var(--base-space);
-  margin-top: var(--base-space);
-  margin-bottom: var(--base-space);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 
 .item__thumbnail {
   width: var(--size-thumbnail);
+  width: 40px;
   height: 40px;
   margin-left: var(--base-space);
+  margin-right: 10px !important;
   font-size: var(--font-size);
 }
